Some fixes in publishers.